--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ title                    : "Lisa Lang"
 title_separator          : "-"
 name                     : "Lisa Lang"
 description              : "Data Science Portfolio XXXX"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : "https://lisahlmsch.github.io"
+baseurl                  : /lisahlmsch
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
