update page title

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ minimal_mistakes_skin    : "default" # "default", "air", "aqua", "contrast", "da
 
 # Site Settings
 locale                   : "en"
-title                    : "Lisa Lang"
+title                    : "Lisa Lang - Data Scientist"
 title_separator          : "-"
 name                     : "Lisa Lang"
 description              : "Data Science Portfolio XX"
