--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ social:
 analytics:
   provider               : "google" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "UA-179272587-1"
+    tracking_id          : UA-179272587-1
 
 
 # Site Author
