--- a/_config.yml
+++ b/_config.yml
@@ -77,9 +77,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google" # false (default), "google", "google-universal", "custom"
+  provider               : "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : UA-179272587-1
+    tracking_id          : "UA-179272587-1"
 
 
 # Site Author
